balance for each account, shown in FE and budget page
